--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "next": "^14.2.12",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-modal": "^3.16.1"
   },
   "devDependencies": {
     "postcss": "^8",
