--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
-    "pdfkit": "^0.15.1"
+    "pdfkit": "^0.15.1",
+    "pdfkit-table": "^0.1.99"
   },
   "devDependencies": {
     "jest": "^29.7.0",
