--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,6 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -38,5 +37,6 @@
         "statements": 80
       }
     }
-  }
+  },
+  "description": ""
 }
