--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,11 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "csv": "^6.3.10",
     "csv-writer": "^1.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
     "pdfkit": "^0.15.1",
